// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<em
  class="custom-class"
  data-name="yozora-emphasis"
  style="color:orange"
>
  some text1
  <span>
    some text2
  </span>
</em>
`;

exports[`snapshot default 1`] = `
<em
  class="yozora-emphasis"
>
  some text1
  <span>
    some text2
  </span>
</em>
`;
